@@ -162,7 +162,7 @@ SQL1_INPUTS = 1
 [getTop10Players]
 SQL1_1 = SELECT name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, mtsmkills, numplayedonserver, campscaptured, teamkills, revives, headshots FROM players ORDER BY totalscore DESC LIMIT 0, 25;
 
-OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
+OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
 
 [domParamsInsertN]
 SQL1_1 = INSERT INTO dom_params2 
