@@ -3,8 +3,6 @@
 #define THIS_FILE "fn_movecheck.sqf"
 #include "..\x_setup.sqf"
 
-// TODO Add UI element
-
 private _opos = getPosWorld player;
 private _m = 0;
 private _lvm = 0;
@@ -13,6 +11,10 @@ private _svm = 0;
 private ["_dst", "_v"];
 
 private _p_distar = _this;
+
+__TRACE_1("","_p_distar")
+
+player setVariable ["d_p_distar", _p_distar];
 
 private _ntime = time + 30 + (random 10);
 __TRACE_1("","_ntime")
@@ -46,7 +48,10 @@ while {true} do {
 	if (time > _ntime) then {
 		_p_distar = [(_p_distar # 0) + _m, (_p_distar # 1) + _lvm, (_p_distar # 2) + _avm, (_p_distar # 3) + _svm];
 		__TRACE_1("","_p_distar")
-		[player, _p_distar] remoteExecCall ["d_fnc_pdistar", 2];
+		if (_p_distar isNotEqualTo (player getVariable ["d_p_distar", []])) then {
+			[player, _p_distar] remoteExecCall ["d_fnc_pdistar", 2];
+			player setVariable ["d_p_distar", _p_distar];
+		};
 		_ntime = time + 30 + (random 10);
 		__TRACE_1("","_ntime")
 	};
